--- a/wordle-helper/backend/package.json
+++ b/wordle-helper/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "backend for wordle-solver",
+  "description": "backend for wordle-helper",
   "main": "backend.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
